testdata/invalid/invalid_message_unknown.bop
message unknownField {
    1 -> whereisthistype x;
}